// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255,255,255,0.05)",
      "borderBottomColor": "#D0D1D5",
      "borderBottomWidth": 1,
      "marginLeft": 20,
      "marginRight": 20,
      "marginTop": 10,
      "transform": Array [
        Object {
          "translateX": 0,
        },
      ],
    }
  }
>
  <TextInput
    selectionColor="#86939e"
    style={
      Array [
        Object {
          "color": "#86939e",
          "minHeight": 36,
          "width": 750,
        },
        Object {
          "fontSize": 17.5,
        },
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "OpenSans-Regular",
            "paddingHorizontal": 10,
            "paddingVertical": 3,
          },
          Array [],
        ],
      ]
    }
    value="John Smith"
  />
</View>
`;

exports[`FormInputSimple renders correctly 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#bdc6cf",
      "borderBottomWidth": 1,
      "marginLeft": 20,
      "marginRight": 20,
      "transform": Array [
        Object {
          "translateX": 0,
        },
      ],
    }
  }
>
  <TextInput
    selectionColor="#86939e"
    style={
      Array [
        Object {
          "color": "#86939e",
          "minHeight": 36,
          "width": 750,
        },
        Object {
          "fontSize": 17.5,
        },
        Array [
          Object {
            "color": "#777777",
            "fontFamily": "OpenSans-Regular",
            "paddingVertical": 3,
          },
          Array [],
        ],
      ]
    }
    value="John Smith"
  />
</View>
`;
